# i3dr_stereo_camera-ros

./: .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: ros-build.yml
cfg/: i3DR_Disparity.cfg  i3DR_pointCloud.cfg
cmake/: FindPhobos.cmake
include/StereoGUI/: StereoGUI.h
include/stereoMatcher/: I3DRSGM.h  abstractStereoMatcher.h  cudaMem.h  jrsgm.h  matcherI3DRSGM.h  matcherJRSGM.h  matcherOpenCVBPCuda.h  matcherOpenCVBlock.h  matcherOpenCVBlockCuda.h  matcherOpenCVCSBPCuda.h  matcherOpenCVSGBM.h
include/stereoMatcher/JRSGM/: matcherJRSGM.h
ini/: JR_matchingparam_without_interpolation.cfg  default.param  quick.param  quick_update.param  quick_v2.param  subpix.param
install/: i3dr_deimos_ros_https.rosinstall  i3dr_deimos_ros_ssh.rosinstall  i3dr_phobos_ros_https.rosinstall  i3dr_phobos_ros_ssh.rosinstall  i3dr_rtabmap_ros_https.rosinstall  i3dr_rtabmap_ros_ssh.rosinstall  i3dr_stereo_camera_cuda_https.rosinstall  i3dr_stereo_camera_cuda_ssh.rosinstall  i3dr_stereo_camera_https.rosinstall  i3dr_stereo_camera_ros_https.rosinstall  i3dr_stereo_camera_ros_ssh.rosinstall  i3dr_stereo_camera_ssh.rosinstall
launch/: single_cam_capture.launch  stereo_bag.launch  stereo_bag_capture.launch  stereo_calibration.launch  stereo_capture.launch  stereo_description.launch  stereo_matcher.launch  stereo_processing.launch  stereo_split_interlaced_laser.launch
rviz/: phobos_nuclear_glue_scene.rviz  phobos_nuclear_map_scene.rviz  tcam_gige_scene.rviz
scripts/: cudaMem  pypylon_laser_test.py  yaml2CameraInfo.py
src/: crop_image_by_disparity.cpp  disparity_to_depth.cpp  generate_disparity.cpp  generate_disparity_no_jr.cpp  generate_point_cloud.cpp  init_i3drsgm.cpp  init_stereo_matcher.cpp  init_stereo_matchers.cpp  matcherJrsgm.cpp  rectify.cpp  split_laser_frames.cpp  stereo_gui.cpp  tiscamera.py  tiscamera_ctrl.py  tiscamera_new.py  tiscamera_trigger.py
src/StereoGUI/: StereoGUI.cpp  StereoGUI.ui
src/stereoMatcher/: I3DRSGM.cpp  abstractStereoMatcher.cpp  jrsgm.cpp  matcherI3DRSGM.cpp  matcherJRSGM.cpp  matcherOpenCVBPCuda.cpp  matcherOpenCVBlock.cpp  matcherOpenCVBlockCuda.cpp  matcherOpenCVCSBPCuda.cpp  matcherOpenCVSGBM.cpp
src/stereoMatcher/JRSGM/: iniReader.cpp  matcherJRSGM.cpp
srv/: SaveRectified.srv
